--- a/secret.env
+++ b/secret.env
@@ -1,5 +1,3 @@
-Ce fichier ne sera plus partagé car il est dans le .gitignore
+AUTH_KEY=35Yd6KhaL0oab4xNO8YHBR46dR5_5XrN6wPeAwfhoXFzZ8NnX
 
-API_KEY = ...
-DB_PASSWORD = ...
 
